create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -97,6 +97,9 @@
 #msg-box3-15 .mbr-article P {
   text-align: center;
 }
+#content1-18 P {
+  text-align: center;
+}
 #ext_menu-q .mbr-brand__name {
   font-size: 16px;
 }
